src/components/sections/home/overboard-story/code/code.module.scss
.code-panel {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;

  .file-tab {
    display: flex;
    align-items: center;
    height: 100%;
    padding: 0 24px;
    font-size: 14px;
    background: var(--color-gray-lighter);
  }

  .code {
    position: relative;
    display: grid;
    grid-template-columns: 25px 4px auto;
    align-content: flex-start;
    line-height: 18px;
    font-size: 14px;
    height: calc(100% - 35px);
    font-family: var(--font-mono);
    padding-top: 10px;
    overflow-y: auto;
    color: #727272;

    .code-line {
      position: relative;
      display: flex;
      flex-direction: column;
      justify-content: center;
      line-height: 15px !important;
      font-size: 14px !important;
      font-family: var(--font-mono);
      width: 100%;

      pre {
        padding-left: 6px;

        code {
          white-space: pre-wrap;
        }
      }
    }

    :global {
      .reserved {
        color: #dd00a9;
      }

      .operator {
        background-color: transparent;
      }

      .declaration {
        color: #000;
      }

      .variable {
        color: #3172e0;
      }

      .function {
        color: #8000d7;
      }

      .symbol {
        color: #000;
      }

      .string {
        color: #5ca939;
      }
    }
  }

  .print-indicator {
    position: relative;
    z-index: var(--z-index-20);
    display: inline-block;
    width: 4;
    height: 100%;

    .add-print {
      opacity: 0;
      border-radius: 6px;
      background: #05acfd;
      position: absolute;
      display: flex;
      place-content: center;
      height: 22px;
      width: 22px;
      color: white;
      left: 8px;
      line-height: 17px;
      font-weight: 600;

      &::after {
        content: '+';
        position: absolute;
        background: #05acfd;
        top: 45%;
        left: 50%;
        font-size: 18px;
        transform: translate(-50%, -50%);
        transition: all var(--duration-fast) ease-out;
      }

      &:global(.active) {
        &::after {
          content: '-';
        }
      }
    }

    .tutorial-popup {
      display: flex;
      opacity: 0;
      color: var(--color-white);
      padding: 8px 16px 8px 10px;
      border-radius: var(--border-radius-md);
      position: absolute;
      min-width: max-content;
      background: linear-gradient(116.04deg, #f41c52 35.23%, #ff537e 129.14%);
      top: -35%;
      left: 14px;
      transform: translateY(-100%);
      font-family: sans-serif;
      transition-duration: var(--duration-fast);

      .sparkles {
        margin-right: 10px;
      }

      .text {
        font-weight: 800;
      }

      .hits {
        display: inline-block;
        margin-top: 4px;
        font-size: 14px;
        font-weight: 400;
      }
    }
  }

  .print-panel {
    overflow: hidden;
    position: relative;
    z-index: var(--z-index-10);
    height: 0;
    width: 100%;
    background: #fafafa;

    .markers {
      position: relative;
      border-radius: var(--border-radius-full);
      background: #f0f0f0;
      padding: 6px;
      display: flex;
      transition: transform var(--duration-fast) ease-out;
      transform-origin: center center;

      &:hover,
      &:global(.active) {
        transform: scale(1.2);

        .toggle::after {
          --background: #d8d8d8;

          height: 2px;
          width: 9px;
        }

        .markers-container {
          pointer-events: all;
          transform: translateX(0px);
          opacity: 1;

          [data-marker='unicorn'] {
            &::after {
              width: 14px;
              left: 3px;
              top: 4px;
            }
          }
        }
      }

      .toggle {
        --background: #d8d8d8;

        position: relative;
        display: inline-block;
        height: 6px;
        width: 6px;

        &::after {
          content: '';
          border-radius: var(--border-radius-full);
          position: absolute;
          background: var(--background);
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
          transition: all var(--duration-fast) ease-out;
          height: 6px;
          width: 6px;
        }
      }

      .markers-container {
        transition-property: opacity, transform;
        transition-duration: var(--duration-fast);
        transition-timing-function: ease-out;
        transform: translateX(-10px);
        border-radius: 0 var(--border-radius-full) var(--border-radius-full) 0;
        top: 0;
        padding: 6px;
        padding-left: 0;
        margin-left: 6px;
        opacity: 0;
        background: #f0f0f0;
        position: absolute;
        display: flex;
        z-index: 0;
        pointer-events: none;

        .marker {
          margin-left: 8px;
        }
      }
    }

    .hit-counter {
      --background: #e5e5e5;
      --color: var(--color-gray);

      transition: background var(--duration-fast) linear;
      background: var(--background);
      border-radius: var(--border-radius-full);
      font-size: 10px;
      display: inline-flex;
      width: 44px;
      height: 16px;
      color: var(--color);
      justify-content: center;
      font-variant-numeric: tabular-num;
    }

    .markers .toggle,
    .hit-counter {
      --color-dark: var(--color-gray);
      --color-light: var(--color-white);

      &.yellow {
        --background: #ff9a19;
        --color: var(--color-light);
      }

      &.purple {
        --background: #cc81ff;
        --color: var(--color-light);
      }

      &.green {
        --background: #69e261;
        --color: var(--color-dark);
      }

      &.red {
        --background: #f41b52;
        --color: var(--color-light);
      }

      &.unicorn {
        --background: #e110b3;
        --color: var(--color-light);
      }
    }
  }
}

